--- a/GUI/src/app/bodies/bruteForceComponent.fxml
+++ b/GUI/src/app/bodies/bruteForceComponent.fxml
@@ -119,8 +119,8 @@
       <Button fx:id="runButton" alignment="CENTER" mnemonicParsing="false" onAction="#runClicked" text="run" textFill="#0b0000" GridPane.columnIndex="3" GridPane.rowIndex="1" />
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3">
          <children>
-            <Button fx:id="stopButton" mnemonicParsing="false" onAction="#stopClicked" text="stop" />
-            <Button fx:id="pauseButton" mnemonicParsing="false" onAction="#pauseClicked" text="pause">
+            <Button fx:id="stopButton" minWidth="50.0" mnemonicParsing="false" onAction="#stopClicked" text="stop" />
+            <Button fx:id="pauseButton" minWidth="50.0" mnemonicParsing="false" onAction="#pauseClicked" text="pause">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
@@ -160,6 +160,9 @@
                </children>
             </HBox>
          </children>
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
       </VBox>
    </children>
 </GridPane>
